# pacman-cpp20

./: .gitignore  CLAUDE.md  CMakeLists.txt  CODING_STANDARDS.md  LICENSE  PROJECT.md  README.md
docs/: PROJECT.md
docs/devlog/: phase-retro-template.md  phase1-2026_04_05.md  phase1-2026_04_06.md  phase2-2026_04_10.md  phase2-2026_04_14.md  phase2-2026_04_15.md  session-note-template.md
src/: main.cpp
src/engine/: game.cpp  game.ixx  input.cpp  input.ixx  renderer.cpp  renderer.ixx  types.ixx
src/game/: concepts.ixx  debug.cpp  debug.ixx  game.cpp  game.ixx  map.cpp  map.ixx  pacman.cpp  pacman.ixx  stage.cpp  stage.ixx  types.ixx
